# soroban-verify-contract

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: contracts.yml
contracts/verification_registry/: Cargo.toml  README.md
contracts/verification_registry/src/: events.rs  lib.rs  test.rs  types.rs
contracts/verification_registry/test_snapshots/test/: admin_can_revoke.1.json  attest_emits_event.1.json  attest_is_last_write_wins_across_verifiers.1.json  attest_rejects_unregistered_and_inactive_verifiers.1.json  attest_stores_record_and_stamps_verifier_and_timestamp.1.json  bump_ttl_succeeds_on_existing_record.1.json  bump_verifier_ttl_fails_on_missing_verifier.1.json  bump_verifier_ttl_succeeds_on_existing_verifier.1.json  get_verification_returns_none_when_never_attested.1.json  init_sets_admin_and_cannot_be_repeated.1.json  list_active_verifiers_returns_only_active.1.json  list_verifiers_does_not_duplicate_on_reregister.1.json  list_verifiers_empty_before_any_registration.1.json  list_verifiers_returns_all_registered_verifiers.1.json  lowest_trust_picks_min_trust_across_active_verifiers.1.json  min_quorum_does_not_publish_when_verifiers_disagree.1.json  min_quorum_waits_for_n_agreements.1.json  policy_defaults_to_last_write_wins.1.json  revoke_downgrades_record_but_keeps_provenance.1.json  revoke_emits_event_with_reason.1.json  revoke_forces_canonical_to_failed_across_policies.1.json  revoke_rejects_strangers_and_missing_records.1.json  set_admin_rotates_governance.1.json  set_policy_emits_policy_changed_event.1.json  (+4 more)
